--- a/flaskblog/templates/main/about.html
+++ b/flaskblog/templates/main/about.html
@@ -1,5 +1,9 @@
 {% extends "layout.html" %}
 
 {% block content %}
-    <h1>About</h1>
+    <h1 class="mb-4">About Page</h1>
+    <p>This is my first Flask project - blog application for learning purposes.</p>
+    <p>Application is implemented by following
+        <a href="https://www.youtube.com/watch?v=MwZwr5Tvyxo&list=PL-osiE80TeTs4UjLw5MM6OjgkjFeUxCYH" target="_blank">Corey Schafer's course on Flask development</a>.
+    </p>
 {% endblock content %}
