--- a/flaskblog/templates/users/login.html
+++ b/flaskblog/templates/users/login.html
@@ -40,7 +40,7 @@
             <div class="form-group">
                 {{ form.submit(class='btn btn-outline-info') }}
                 <small class="text-muted ml-2">
-                    <a href="{{ url_for('users.reset_request') }}">Forgot password?</a>
+                    <a href="{{ url_for('users.password_reset_request') }}">Forgot password?</a>
                 </small>
             </div>
         </form>
