--- a/flaskblog/templates/users/login.html
+++ b/flaskblog/templates/users/login.html
@@ -47,7 +47,7 @@
     </div>
     <div class="border-top pt-3">
         <small class="text-muted">
-            Need an account? <a href="{{ url_for('users.login') }}">Sign up</a> now!
+            Need an account? <a href="{{ url_for('users.register') }}">Sign up</a> now!
         </small>
     </div>
 {% endblock content %}
