--- a/flaskblog/templates/users/user_posts.html
+++ b/flaskblog/templates/users/user_posts.html
@@ -4,7 +4,7 @@
     <h1 class="mb-3">Posts by {{ user.username }} ({{ posts.total }})</h1>
     {% for post in posts.items %}
         <article class="media content-section">
-          <img class="rounded-circle article-img" src="{{ url_for('static', filename='profile_pics/' + post.author.image) }}">
+          <img class="rounded-circle article-img" src="{{ url_for('static', filename='users/profile_pics/' + post.author.image) }}">
           <div class="media-body">
             <div class="article-metadata">
               <span class="text-muted">{{ post.author.username }}</span>
